Plot of the training data decision boundary for the optimal K

--- a/k_Nearest_Neighbors/k_Nearest_Neighbors.html
+++ b/k_Nearest_Neighbors/k_Nearest_Neighbors.html
@@ -9,9 +9,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=EDGE" />
 
 
-<meta name="author" content="Nisansala Wickramasinghe" />
 
-<meta name="date" content="2023-11-18" />
 
 <title>k Nearest Neighbors</title>
 
@@ -351,16 +349,13 @@ display: none;
 
 
 <h1 class="title toc-ignore">k Nearest Neighbors</h1>
-<h4 class="author">Nisansala Wickramasinghe</h4>
-<h4 class="date">2023-11-18</h4>
 
 </div>
 
 
 <p>Consider the training and test data.</p>
 <ol style="list-style-type: lower-alpha">
-<li>KNN is fitted for K = 1, 6, <span class="math inline">\(\dots\)</span> 200 and the code is presented in
-the R code section.</li>
+<li>KNN is fitted for K = 1, 6, <span class="math inline">\(\dots\)</span> 200.</li>
 </ol>
 <p> </p>
 <pre class="r"><code>q1.train&lt;-read.csv(&quot;1-training_data.csv&quot;)
